set GiphyInput overflow to auto the correct way

--- a/src/core/client/stream/tabs/Comments/GiphyInput/GiphyInput.css
+++ b/src/core/client/stream/tabs/Comments/GiphyInput/GiphyInput.css
@@ -42,9 +42,5 @@
 
 .grid {
   max-height: 300px;
-  overflow: scroll;
-}
-
-div[class^="GiphyInput-grid"] {
   overflow: auto;
 }
